# doc-helper-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.aws/: ecs-task-definition.json
.aws/iam/: doc-helper-dynamodb-policy.json  ecs-task-role-trust-policy.json  github-actions-passrole-policy.json
.github/: AGENTS.md  CODEBASE_MAP.md  copilot-instructions.md
.github/instructions/: agent-workflow.instructions.md  codebase-map.instructions.md  python.instructions.md  safety.instructions.md  tests.instructions.md  tools.instructions.md
.github/prompts/: add-classification.prompt.md  add-sample-doc.prompt.md  add-tool.prompt.md  verify.prompt.md
.github/tools/: README.md  check.py  smoke_test.py
.github/workflows/: ci.yml  deploy.yml  terraform.yml
data/sample_docs/: clinic_faq.md  patient_policy.md  pricing.md  services.md
data/sample_docs/es/: clinic_faq.md  patient_policy.md  pricing.md  services.md
docs/superpowers/specs/: 2026-07-10-dynamodb-crm-design.md
infra/terraform/bootstrap/: main.tf  outputs.tf  variables.tf
infra/terraform/scripts/: validate.ps1
src/: agent.py  main.py  tools.py
src/doc_helper_ai_agent/: __init__.py  dependencies.py  main.py
src/doc_helper_ai_agent/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/doc_helper_ai_agent/core/: __init__.py  config.py  (+2 more)
tests/: conftest.py  test_agent_routing.py  test_appointment_tools.py  test_chat_api.py  test_dynamodb_crm.py  test_health.py  test_intake_service.py  test_rag_service.py  test_safety_service.py
(+40 files in other folders)
