[project]
name = "dental-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langgraph>=1.2.8",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
