[project]
name = "doc-helper-ai-agent"
version = "0.1.0"
description = "Local-first, production-style AI agent backend for document Q&A and clinic-style operations (appointments, callbacks, escalations)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langgraph>=1.2.8",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.5.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
doc-helper-ai-agent = "doc_helper_ai_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_helper_ai_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]
